--- a/rootdir/init.sony-device-common.rc
+++ b/rootdir/init.sony-device-common.rc
@@ -5,6 +5,10 @@
 
 on early-init
     exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules/ \
+    et603-int
+
+# SONY: Touch
+    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules/ \
     lxs_touchscreen
 
 on boot
@@ -18,3 +22,10 @@ on property:vendor.display.hmd_mode=0 && property:vendor.enable.always_on_displa
 
 on property:vendor.display.hmd_mode=1 && property:vendor.enable.always_on_display=0 && property:vendor.backlight_on=1
     write /sys/devices/dsi_panel_driver/hmd_mode 1
+
+# Panel FLM2 mode
+on property:vendor.display.panel_flm2_mode=0 && property:vendor.enable.always_on_display=0 && property:vendor.backlight_on=1
+    write /sys/devices/dsi_panel_driver/flm2_mode 0
+
+on property:vendor.display.panel_flm2_mode=1 && property:vendor.enable.always_on_display=0 && property:vendor.backlight_on=1
+    write /sys/devices/dsi_panel_driver/flm2_mode 1
