--- a/rootdir/init.sony-platform.rc
+++ b/rootdir/init.sony-platform.rc
@@ -18,32 +18,6 @@ on init
 on property:ro.boot.hardware.sku=""
     setprop ro.oem.key1 c999999
 
-# SONY: TrimArea Daemon
-# Last 2 args: start block(blk size 128k), number of blocks(partitionsize(kb)/128(kb))
-service tad /vendor/bin/tad /dev/block/bootdevice/by-name/TA 0,16
-    user oem_2997
-    group oem_2997 root
-    socket tad stream 0660 system oem_2993
-    class trimarea
-    seclabel u:r:tad:s0
-
-on init && property:ro.build.type=userdebug
-    write /sys/module/powerkey_forcecrash/parameters/forcecrash_on 1
-
-on init && property:ro.build.type=user
-    write /sys/kernel/dload/dload_mode mini
-
-on early-init
-    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules/ \
-    et603-int
-
-    # SONY: Enable wakeup irq module
-    write /sys/devices/platform/wakeup_debug.0/enable 1
-
-#set warm reset on S2 for userdebug only
-on init && property:ro.build.type=userdebug
-    exec u:r:pmic_key_reset:s0 root drmrpc -- /vendor/bin/pmic_key_reset 2 0 4480 0
-
 on post-fs
     # Sensor
     chown system system /mnt/vendor/persist/sensors
@@ -63,33 +37,48 @@ on post-fs
     mkdir /mnt/vendor/persist/wifi 0700 root system
     mkdir /mnt/vendor/persist/wifi/kiwi_v2 0700 root system
 
-on post-fs-data
-    # backlight
-    chown system system /sys/class/backlight/panel0-backlight/brightness
+# SONY: TrimArea Daemon
+# Last 2 args: start block(blk size 128k), number of blocks(partitionsize(kb)/128(kb))
+service tad /vendor/bin/tad /dev/block/bootdevice/by-name/TA 0,16
+    user oem_2997
+    group oem_2997 root
+    socket tad stream 0660 system oem_2993
+    class trimarea
+    seclabel u:r:tad:s0
 
+on post-fs-data
     # Fingerprint EGIS irq
-    chown system system /dev/esfp0
-    chmod 0600 /dev/esfp0
     mkdir /data/vendor/egis 0770 system system
     start ets_hal
 
-    # Create 360ra dir for audioHAL
-    mkdir /data/vendor/360ra 0775 audioserver audio
-    copy /vendor/etc/alc.speaker.bin /data/vendor/360ra/alc.speaker.bin
-    chmod 0770 /data/vendor/360ra/alc.speaker.bin
-    chown audioserver audio /data/vendor/360ra/alc.speaker.bin
+    # backlight
+    chown system system /sys/class/backlight/panel0-backlight/brightness
 
 on early-boot
     # Display
     chown system system /sys/devices/dsi_panel_driver/flm2_mode
-    chown system system /sys/devices/dsi_panel_driver/camera_flash_brightness
-    chown system system /sys/devices/dsi_panel_driver/thermal_limit
     chown system system /sys/devices/dsi_panel_driver/somc_max_luminance
+    chown system system /sys/devices/dsi_panel_driver/camera_flash_brightness
+    chown system system /sys/module/msm_drm/parameters/dp_validate_mode
     chown system oem_2987 /sys/devices/dsi_panel_driver/area_count
     chown system oem_2987 /sys/devices/dsi_panel_driver/panel_id
     chmod 0440 /sys/devices/dsi_panel_driver/panel_id
-    chown system system /sys/module/msm_drm/parameters/dp_validate_mode
-    chown system system /sys/devices/dsi_panel_driver/somc_max_brightness
+
+on boot
+    # SONY: Touch
+    write /sys/devices/virtual/input/lxs_ts_input/after_probe 1
+
+on property:ro.build.type=user && property:ro.boot.verifiedbootstate=orange
+    setprop persist.sys.usb.config adb
+
+on property:sys.powerctl=*
+    start spcdeld
+
+on init && property:ro.build.type=userdebug
+    write /sys/module/powerkey_forcecrash/parameters/forcecrash_on 1
+
+on init && property:ro.build.type=user
+    write /sys/kernel/dload/dload_mode mini
 
 on charger && property:ro.build.type=userdebug
     mkdir /mnt/vendor/persist 0771 root system
@@ -98,33 +87,8 @@ on charger && property:ro.build.type=userdebug
     mkdir /mnt/vendor/persist/charge_log 0770 system system
 
 on charger
-    # Charger
-    wait /sys/class/battchg_ext
-    chmod 0664 /sys/class/battchg_ext/usb_input_suspend
-    chmod 0664 /sys/class/battchg_ext/lrc_charge_disable
-    chmod 0664 /sys/class/battchg_ext/lrc_input_suspend
-    chmod 0664 /sys/class/battchg_ext/batt_aging_level
-    chmod 0664 /sys/class/battchg_ext/bootup_shutdown_phase
-    chmod 0664 /sys/class/battchg_ext/system_temp_level
-    chmod 0664 /sys/class/battchg_ext/restored_capacity
-    chmod 0664 /sys/class/battman_dbg/regupdate_interval
-    chmod 0664 /sys/class/battman_dbg/log_interval
-    chmod 0664 /sys/class/battman_dbg/log_categories
-    chmod 0664 /sys/class/battman_dbg/log_level
-    chmod 0664 /sys/class/qcom-battery/ship_mode_en
-
-    # The charge_service/chargemon use wakelock before on boot, so add permission here.
-    chown radio wakelock /sys/power/wake_lock
-    chown radio wakelock /sys/power/wake_unlock
-    chmod 0660 /sys/power/wake_lock
-    chmod 0660 /sys/power/wake_unlock
-
     # charge_service
     start charge_service
-
-    # smart_charging
-    chown system system /sys/class/battchg_ext/smart_charging_activation
-    chown system system /sys/class/battchg_ext/smart_charging_interruption
 
     # Set USB mode to MSC for SDP charging
     setprop sys.usb.config mass_storage_charge
@@ -137,40 +101,21 @@ on charger
     chown system system /sys/class/backlight/panel0-backlight/brightness
 
 on boot && property:ro.build.type=userdebug
-    mkdir /data/vendor_de/charge_log 0770 system system
+    mkdir /data/vendor/charge_log 0770 system system
 
 on boot
-    chmod 0664 /sys/class/battman_dbg/log_interval
-    chmod 0664 /sys/class/battman_dbg/log_categories
-    chmod 0664 /sys/class/battman_dbg/log_level
-    chmod 0664 /sys/class/battman_dbg/regupdate_interval
-
-    # Charger
-    chmod 0664 /sys/class/battchg_ext/usb_input_suspend
-    chmod 0664 /sys/class/battchg_ext/lrc_charge_disable
-    chmod 0664 /sys/class/battchg_ext/lrc_input_suspend
-    chmod 0664 /sys/class/battchg_ext/batt_aging_level
-    chmod 0664 /sys/class/battchg_ext/system_temp_level
-    chmod 0664 /sys/class/battchg_ext/restored_capacity
-    chmod 0444 /sys/kernel/debug/battery_debug/votables/fv_tot/status
-    chmod 0444 /sys/kernel/debug/battery_debug/votables/iusb0_tot/status
-    chmod 0444 /sys/kernel/debug/battery_debug/votables/fcc_tot/status
-    chmod 0664 /sys/class/qcom-battery/wireless_boost_en
-
     # charge_service
     start charge_service
 
-on post-fs-data
-    # Charger
-    chmod 0664 /sys/class/power_supply/battery/uevent
-    chmod 0664 /sys/class/power_supply/wireless/uevent
-    chmod 0664 /sys/class/power_supply/usb/uevent
+    # Set property to enable Qualcomm WAR solution for VoIP call
+    setprop persist.vendor.enable.bluetooth.voipleawar true
 
-    # The charge_service use wakelock before on boot, so add permission here.
-    chown radio wakelock /sys/power/wake_lock
-    chown radio wakelock /sys/power/wake_unlock
-    chmod 0660 /sys/power/wake_lock
-    chmod 0660 /sys/power/wake_unlock
+on post-fs-data
+    # Create 360ra dir for audioHAL
+    mkdir /data/vendor/360ra 0775 audioserver audio
+    copy /vendor/etc/alc.speaker.bin /data/vendor/360ra/alc.speaker.bin
+    chmod 0770 /data/vendor/360ra/alc.speaker.bin
+    chown audioserver audio /data/vendor/360ra/alc.speaker.bin
 
 # chargemon
 service chargemon /vendor/bin/chargemon
@@ -214,11 +159,9 @@ on property:sys.shutdown.requested=*
     write /sys/class/battchg_ext/bootup_shutdown_phase 4
     write /sys/class/power_supply/battery/uevent change
 
-on property:ro.build.type=user && property:ro.boot.verifiedbootstate=orange
-    setprop persist.sys.usb.config adb
-
-on property:sys.powerctl=*
-    start spcdeld
+# create directory for wfd
+on post-fs-data && property:ro.build.type=userdebug
+    mkdir /data/vendor/wfd 0777 system system
 
 # Touch
 on property:vendor.backlight_on=1
@@ -234,13 +177,3 @@ on property:vendor.enable.always_on_display=0 && property:vendor.backlight_on=1
 on property:vendor.enable.always_on_display=1 && property:vendor.backlight_on=1
     write /sys/devices/virtual/input/lxs_ts_input/set_lowpower_mode 1
     write /sys/devices/virtual/input/lxs_ts_input/enable 1
-
-on property:vendor.smartstamina.touchreport=1
-    write /sys/devices/virtual/input/lxs_ts_input/frame_rate_np "0 1"
-
-on property:vendor.smartstamina.touchreport=0
-    write /sys/devices/virtual/input/lxs_ts_input/frame_rate_np "0 2"
-
-# create directory for wfd
-on post-fs-data && property:ro.build.type=userdebug
-    mkdir /data/vendor/wfd 0777 system system
