--- a/rootdir/init.sony.rc
+++ b/rootdir/init.sony.rc
@@ -35,43 +35,8 @@ on property:vendor.post_boot.parsed=1
     write /proc/irq/246/smp_affinity_list 2
     write /proc/irq/43/smp_affinity_list 1
 
-on property:ro.vendor.ltalabel.model=XQ-BC72
-    setprop ro.vendor.product.rf.id PDX215-C2
-
-on property:ro.vendor.ltalabel.model=XQ-BC62
-    setprop ro.vendor.product.rf.id PDX215-A2US
-
-on property:ro.vendor.ltalabel.model=XQ-BC52
-    setprop ro.vendor.product.rf.id PDX215-A2
-
-on property:ro.vendor.ltalabel.model=XQ-BC42
-    setprop ro.vendor.product.rf.id PDX215-J2
-    setprop persist.vendor.nfc.config_file_name "libnfc-nxp-typef.conf"
-
-on property:ro.vendor.ltalabel.model=XQ-BQ72
-    setprop ro.vendor.product.rf.id PDX214-C2
-
-on property:ro.vendor.ltalabel.model=XQ-BQ62
-    setprop ro.vendor.product.rf.id PDX214-A2US
-
-on property:ro.vendor.ltalabel.model=XQ-BQ52
-    setprop ro.vendor.product.rf.id PDX214-A2
-
-on property:ro.vendor.ltalabel.model=XQ-BQ42
-    setprop ro.vendor.product.rf.id PDX214-J2
-    setprop persist.vendor.nfc.config_file_name "libnfc-nxp-typef.conf"
-
-on property:ro.vendor.ltalabel.model=XQ-DQ44
-    setprop ro.vendor.product.rf.id pdx234-J4
-
-on property:ro.vendor.ltalabel.model=XQ-DQ54
-    setprop ro.vendor.product.rf.id pdx234-A4
-
-on property:ro.vendor.ltalabel.model=XQ-DQ62
-    setprop ro.vendor.product.rf.id pdx234-A2US
-
-on property:ro.vendor.ltalabel.model=XQ-DQ72
-    setprop ro.vendor.product.rf.id pdx234-C2
+on property:ro.vendor.ltalabel.model=XQ-EC72
+    setprop ro.vendor.product.rf.id pdx245-C2
 
 # USB config, refer to init.sony.usb.rc
 on property:sys.usb.config=adb && property:sys.usb.configfs=1
